<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomCameraActivity">

    <!-- Camera Preview -->
    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Transparent overlay with a square box -->
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overlay_square" />


    <!-- Rectangular Box 1 -->
    <TextView
        android:id="@+id/rect_box1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_rect_black"
        android:gravity="center"
        android:text="@string/box_1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/rect_box2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Rectangular Box 2 -->
    <TextView
        android:id="@+id/rect_box2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_rect_black"
        android:gravity="center"
        android:text="@string/box_2"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/rect_box3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Rectangular Box 3 -->
    <TextView
        android:id="@+id/rect_box3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_rect_black"
        android:gravity="center"
        android:text="@string/box_3"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/rect_box4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- Rectangular Box 4 -->
    <TextView
        android:id="@+id/rect_box4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_rect_black"
        android:gravity="center"
        android:text="@string/box_4"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/black_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Black background below the button -->
    <View
        android:id="@+id/black_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/captureButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circular_border"
        android:contentDescription="@string/cam"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/neoicon"
        app:layout_constraintBottom_toBottomOf="@id/black_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/black_background"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@null" />


    <ImageView
        android:id="@+id/left_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/baseline_burst_mode_24"
        app:layout_constraintBottom_toBottomOf="@id/black_background"
        app:layout_constraintEnd_toStartOf="@id/captureButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@color/white" />


    <ImageView
        android:id="@+id/right_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/baseline_format_list_bulleted_24"
        app:layout_constraintBottom_toBottomOf="@id/black_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/captureButton"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@color/white" />


    <FrameLayout
        android:id="@+id/black_background_with_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@android:color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/black_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/display_image"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:visibility="gone" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
